# mnlvn-video-downloader

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/mnlvm_video_downloader/: __init__.py  cli.py  exceptions.py  mnlvm_video_downloader.py
src/mnlvm_video_downloader/controllers/: video.py
src/mnlvm_video_downloader/utils/: constants.py  utils.py
src/mnlvm_video_downloader/windows/: helper.py  views.py
tests/: __init__.py  test_mnlvm_video_downloader.py
