[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnlvm_video_downloader"
version = "0.1.0"
description = "This project permit us to download video youtube playlist"
readme = "README.rst"
authors = [
  {name = "mnlvm-video-downloader", email = "masterivanic@gmail.com"}
]
maintainers = [
  {name = "mnlvm-video-downloader", email = "masterivanic@gmail.com"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/masterivanic/mnlvm_video_downloader/issues"
changelog = "https://github.com/masterivanic/mnlvm_video_downloader/blob/master/changelog.md"
homepage = "https://github.com/masterivanic/mnlvm_video_downloader"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

